--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -21,6 +21,8 @@
     <td><%= property. remarks%></td>
 
     <td><%= link_to '詳細', property_path(property.id) %></td>
+    <td><%= link_to '編集', edit_property_path(property) %></td>
+    <td><%= link_to '削除', property, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
