--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -16,7 +16,7 @@
   <tr>
     <td><%= property. property%></td>
     <td><%= property. rent%></td>
-    <td><%= property. adress%></td>
+    <td><%= property. address%></td>
     <td><%= property. age%></td>
     <td><%= property. remarks%></td>
 
@@ -27,4 +27,4 @@
 <% end %>
 </table>
 
-<%= link_to '物件を登録する', '/properties' %>
+<%= link_to '物件を登録する', new_property_path %>
